data/all_generated_tests/raw_wast_tests/unreachable_StackCorruption_978.wast
;; 9. **Test Description:**    Testing `unreachable` within a switch-case-like structure where different cases contain varied stack operations. Tests if entering `unreachable` case halts all stack manipulation.    <br>**Constraint:** Confirm that only non-`unreachable` cases perform stack operations and `unreachable` halts the control flow effectively.

(assert_invalid
  (module
    (func $switch_case_like (param i32) (result i32)
      (block (result i32)
        (block (result i32)
          (br_table 0 1 (local.get 0))
          (return (i32.const 42))
        )
        (unreachable)
      )
    )
  )
  "type mismatch"
)